Refactored the overworld scanning discord bot and added more detailed notifications.
* The discord bot is its own class
* The test is now named inline with other tests
* The test is a minimal stub to invoke the discord bot
* The config file now takes Channel IDs for both text and event based notifications.

--- a/config.json
+++ b/config.json
@@ -1,3 +1,13 @@
 {
-    "IP": "192.168.0.106"
+    "IP": "",
+    "EventNotificationChannelIdForShiny": "",
+    "EventNotificationChannelIdForBrilliant": "",
+    "EventNotificationChannelIdForMark": "",
+    "EventNotificationChannelIdForRareMark": "",
+    "NotificationChannelForInfo": "",
+    "TextNotificationChannelIdForShiny": "",
+    "TextNotificationChannelIdForBrilliant": "",
+    "TextNotificationChannelIdForMark": "",
+    "TextNotificationChannelIdForRareMark": "",
+    "EnableDebugLogging": "False"
 }
