Simplied configuration for the discord bot by requiring it in the constructor.
DiscordBotPrefix, used to prefix commands to the bot sent from discord, is now part of the config.

--- a/config.template.json
+++ b/config.template.json
@@ -1,6 +1,7 @@
 {
+    "DiscordBotPrefix": "$",
     "DiscordToken": "",
-    "EnableDebugLogging": "",
+    "EnableDebugLogging": "False",
     "EventNotificationChannelIdForShiny": "",
     "EventNotificationChannelIdForBrilliant": "",
     "EventNotificationChannelIdForMark": "",
