--- a/config.template.json
+++ b/config.template.json
@@ -7,6 +7,7 @@
     "EventNotificationChannelIdForMark": "",
     "EventNotificationChannelIdForRareMark": "",
     "IP": "",
+    "USB": false,
     "NotificationChannelForInfo": "",
     "TextNotificationChannelIdForShiny": "",
     "TextNotificationChannelIdForBrilliant": "",
