--- a/config.template.json
+++ b/config.template.json
@@ -1,4 +1,17 @@
 {
-    "IP": "",
-    "USB": false
+    "DiscordBotPrefix": "$",
+    "DiscordToken": "",
+    "EnableDebugLogging": "False",
+    "EventNotificationChannelIdForShiny": "",
+    "EventNotificationChannelIdForBrilliant": "",
+    "EventNotificationChannelIdForMark": "",
+    "EventNotificationChannelIdForRareMark": "",
+    "IP": "192.168.1.63",
+	"USB": false,
+	"SeedCheckOnly": false,
+    "NotificationChannelForInfo": "",
+    "TextNotificationChannelIdForShiny": "",
+    "TextNotificationChannelIdForBrilliant": "",
+    "TextNotificationChannelIdForMark": "",
+    "TextNotificationChannelIdForRareMark": ""
 }
